// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmark snapshot Should render as expected 1`] = `
<li>
  My Bookmark
   (
  <a
    href="http://www.mybookmark.com"
  >
    Visit
  </a>
  )
  <button
    onClick={[Function]}
  >
    Delete!
  </button>
</li>
`;

exports[`Bookmark snapshot Should render as expected with login error 1`] = `
<form
  onSubmit={[Function]}
>
  <p>
    login error
  </p>
  <label>
    Email: 
    <input
      name="email"
      type="email"
    />
  </label>
  <br />
  <label>
    Password: 
    <input
      name="password"
      type="password"
    />
  </label>
  <br />
  <button
    type="submit"
  >
    Login
  </button>
</form>
`;

exports[`Bookmark snapshot Should render as expected without login error 1`] = `
<form
  onSubmit={[Function]}
>
  <label>
    Email: 
    <input
      name="email"
      type="email"
    />
  </label>
  <br />
  <label>
    Password: 
    <input
      name="password"
      type="password"
    />
  </label>
  <br />
  <button
    type="submit"
  >
    Login
  </button>
</form>
`;
